force-app/main/default/objects/PagoMensual__c/PagoMensual__c.object-meta.xml
<CustomObject>
    <label>Pago Mensual</label>
    <nameField>
        <displayFormat>PAG-{0000}</displayFormat>
        <label>Pago Mensual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos Mensuales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>