force-app/main/default/objects/PagoMensual__c/fields/A_o__c.field-meta.xml
<CustomField>
    <fullName>A_o__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <label>Año</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>