force-app/main/default/objects/PagoMensual__c/fields/EstadoPago__c.field-meta.xml
<CustomField>
    <fullName>EstadoPago__c</fullName>
    <label>Estado De Pago</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Atrasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>