force-app/main/default/objects/PagoMensual__c/fields/FechaPago__c.field-meta.xml
<CustomField>
    <fullName>FechaPago__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha De Pago</label>
    <type>Date</type>
</CustomField>