force-app/main/default/objects/PagoMensual__c/validationRules/VR_RequirePaymentDate_WhenPaid.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_RequirePaymentDate_WhenPaid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(EstadoPago__c ,&quot;Pagado&quot;) ,ISBLANK(FechaPago__c))</errorConditionFormula>
    <errorDisplayField>FechaPago__c</errorDisplayField>
    <errorMessage>Fecha de Pago es obligatoria cuando el Estado de Pago es &quot;Pagado&quot;.</errorMessage>
</ValidationRule>